# puerto-rico

./: .gitignore  CLAUDE.md  README.md  conversation-notes.md  pyproject.toml
design/: 00-overview-and-architecture.md  01-engine-core-and-state.md  02-engine-phases-and-flow.md  03-buildings-reference.md  04-rl-environment.md  05-agents-and-training.md  06-ui.md
docs/: README.md  puerto-rico-rules.md  rl-strategy-audit.md
tasks/: README.md  agents-task-01-random-agent.md  agents-task-02-heuristic-agent.md  agents-task-03-env-registration.md  agents-task-04-masked-model.md  agents-task-05-opponent-pool.md  agents-task-06-reward-shaping.md  agents-task-07-ppo-training.md  agents-task-08-rl-policy.md  agents-task-09-evaluation-harness.md  agents-task-10-smoke-test.md  agents-task-11-rl-vs-heuristic-benchmark.md  buildings-task-01-buildingid-and-catalog.md  buildings-task-02-hook-framework.md  buildings-task-03-production-specs.md  buildings-task-04-small-beige-core-handlers.md  buildings-task-05-settler-mayor-handlers.md  buildings-task-06-large-scoring-handlers.md  buildings-task-07-integration-test.md  buildings-task-08-helper-functions.md  engine-core-task-01-enums.md  engine-core-task-02-state-data-structures.md  engine-core-task-03-action-protocol.md  engine-core-task-04-setup-initialization.md  engine-core-task-05-clone-immutability.md  engine-core-task-06-serialization.md  engine-core-task-07-public-api.md  engine-core-task-08-integration-random-playthrough.md  env-task-01-action-codec.md  env-task-02-obs-codec.md  env-task-03-pettingzoo-env.md  (+20 more)
(+108 files in other folders)
